--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
    <article>
    <h3>#studiocode509</h3>
-   <p>
+   <p class="image-zoom">
      <img src="fond.png" alt="Icône" class="flotan">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.
    </p>
@@ -130,9 +130,9 @@
        Lien de mes réseaux sociaux !!! :
      </h4><br>
      <p>
-       <a href="#">Facebook</a><br>
-       <br><a href="#">Instagram</a><br>
-      <br> <a href="#">Twitter</a>
+       <a href="https://www.facebook.com/throg.francois?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a><br>
+       <br><a href="https://instagram.com/thro_g01?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"><i class="fa-brands fa-instagram"></i></a><br>
+      <br> <a href="https://twitter.com/francois_gethro?t=IzwW_sipxMukK2Z-P8bDuw&s=09"><i class="fa-brands fa-twitter"></i></a>
      </p>
    </div>
  </footer>
